# yf-skills

./: .gitignore  CLAUDE_MARKETPLACE.md  README.md
.claude-plugin/: marketplace.json
docs/: paper-trading-migration.md
gf-finance/: SKILL.md
gf-finance/.claude-plugin/: plugin.json
gf-finance/assets/: mcp_config.json
gf-finance/references/: lhb.md
gf-finance/scripts/: mcp_client.py  quant_analysis.py
nbl-ppt--builder/: SKILL.md
nbl-ppt--builder/scripts/: validation_report.json
nbl-ppt--builder/templates/: template_end.html  template_toc.html
nbl-ppt-builder/: SKILL.md
nbl-ppt-builder/.claude-plugin/: plugin.json
nbl_jira/: jira-issue-submitter.skill
paper-trading/: .gitignore  SKILL.md
searxng-search/: README.md  SKILL.md
siyuan-notes/: .gitignore  SKILL.md
stock-daily-analysis/: SKILL.md
stock-market-data/: SKILL.md
stock-toolkit/skills/paper-trading/scripts/: README.md  pyproject.toml
stock-toolkit/skills/paper-trading/scripts/paper_trading/: __init__.py  analytics.py  cli.py  code_searcher.py  conditions.py  conditions_manager.py  exright_cache.py  exright_fetcher.py  exright_handler.py  kline_fetcher.py  market_summary.py  models.py  news_fetcher.py  portfolio.py  price_fetcher.py  reporting.py  storage.py  trading.py
stock-toolkit/skills/paper-trading/scripts/tests/: test_cli.py  test_conditions_cli.py  test_exright.py  test_kline_fetcher.py  test_market_summary.py  test_price_fetcher.py  test_storage.py  test_trading.py
stock-toolkit/skills/stock-market-data/scripts/: fetch_kline_data.py  fetch_realtime_stock.py  pyproject.toml  search_stock_code.py
(+111 files in other folders)
