[project]
name = "stock-market-data"
version = "1.0.0"
description = "中国A股、香港港股和美国NASDAQ市场实时股票数据查询工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=1.0.0",
    "requests>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "fetch_kline_data",
    "fetch_realtime_stock",
    "fetch_market_news",
    "search_stock_code"
]

[project.scripts]
fetch-kline-data = "fetch_kline_data:main"
fetch-realtime-stock = "fetch_realtime_stock:main"
fetch-market-news = "fetch_market_news:main"
search-stock-code = "search_stock_code:main"
